--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.46.2",
     "react-redux": "^8.1.2",
     "react-router": "^6.16.0",
+    "react-router-dom": "^6.16.0",
     "redux": "^4.2.1"
   },
   "devDependencies": {
